adding a try-catch for the setup of the camera.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="col-sm-4 text-center">
           <h3>Camera Control:</h3>
           <video  style="margin-top: -15px" autoplay playsinline muted id="webcam" width="352" height="240"></video>
-          <button id="class-0">Move UP</button>
+          <button id="class-0">Move Up</button>
           <button id="class-1">Stop</button>
           <button id="class-2">Move Down</button>
       </div>
@@ -51,8 +51,6 @@
             <div> Probability: <span id="probability"> </span></div>
           </div>
       </div>
-      <!-- <div class="col-sm-4">
-      </div> -->
     </div>
   </div>
   <script src="index.js"></script>
